syntax = "proto3";

package user;

import "google/api/annotations.proto"; 

service UserService {
    rpc GetUserById (UserRequestById) returns (UserResponse) {
        // Ánh xạ GET request đến /v1/users/{user_id}
        // user_id từ path parameter sẽ được map vào trường user_id của UserRequestById
        option (google.api.http) = {
            get: "/v1/users/{user_id}"
        };
    }
    rpc GetUserByEmail (UserRequestByEmail) returns (UserResponse) {
        // Ví dụ: GET /v1/users/by-email?email=test@example.com
        // email từ query parameter sẽ được map vào trường email của UserRequestByEmail
        option (google.api.http) = {
            get: "/v1/users/by-email"
        };
    }
    rpc GetUserByWalletAddress (UserRequestByWallet) returns (UserResponse) {
        option (google.api.http) = {
            get: "/v1/users/by-wallet/{wallet_address}"
        };
    }
    rpc CreateUser (CreateUserRequest) returns (UserResponse) {

    }
    rpc AuthenticateUser (AuthenticateUserRequest) returns (UserResponse) {
    }

    rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {
        option (google.api.http) = {
            put: "/v1/users/{user_id}"
            body: "*"
        };
    }

    rpc UpdateUserAvatar(UpdateUserAvatarRequest) returns (UserResponse) {
        option (google.api.http) = {
            put: "/v1/users/{user_id}/avatar"
            body: "*"
        };
    }
}

message UpdateUserAvatarRequest {
    string user_id = 1;
    bytes avatar_file_content = 2; // Nội dung file avatar, client gửi dạng base64 string
    string original_file_name = 3; // Tên file gốc
}

message UserRequestById {
    string user_id = 1;
}

message UserResponse {
    string id = 1;
    string full_name = 2;
    string email = 3;
    string phone_number = 4;
    string wallet_address = 5;
    string avatar_cid = 6;
    repeated string ticket_ids = 7;
    string role = 8;
    string created_at = 9;
    string updated_at = 10;
}
message CreateUserRequest {
    string email = 1;
    string full_name = 2;
    string wallet_address = 3;
    string phone_number = 4;
    string password = 5;
    string role = 6;
    string avatar_cid = 7;
}
message AuthenticateUserRequest {
    string email = 1;
    string password = 2;
}
message UserRequestByEmail {
    string email = 1;
}
message UserRequestByWallet {
    string wallet_address = 1;
}

message UpdateUserRequest {
    string user_id = 1;
    string full_name = 2;
    string phone_number = 3;
    string wallet_address = 4;
    string avatar_cid = 5;
}